syntax = "proto2";

package yamcs.protobuf.sle;

option java_package = "org.yamcs.sle.api";
option java_outer_classname = "SleProto";
option java_multiple_files = true;

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

import "yamcs/api/annotations.proto";
 
service SleApi {
  // Request Offline Data
  rpc RequestOfflineData(RequestOfflineDataRequest) returns (google.protobuf.Empty) {
    option (yamcs.api.route) = {
      post: "/api/sle/links/{instance}/{linkName}:requestOfflineData"
      body: "*"
    };
  }
}

message RequestOfflineDataRequest {
  optional string instance = 1;
  optional string linkName = 2;
  repeated OfflineRange ranges = 3;
}

message OfflineRange {
  optional google.protobuf.Timestamp start = 2;
  optional google.protobuf.Timestamp stop = 3;
}
